--- a/ESCDevelopTool/OSX/MultiPeerConnection/MPCViewController.xib
+++ b/ESCDevelopTool/OSX/MultiPeerConnection/MPCViewController.xib
@@ -7,6 +7,7 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="MPCViewController">
             <connections>
+                <outlet property="currentPeerLabel" destination="FUQ-wZ-jbr" id="xZb-Yo-Uqh"/>
                 <outlet property="displayNameTextField" destination="aS3-Jc-fBo" id="mTt-W7-zGc"/>
                 <outlet property="historyTextView" destination="FIU-kq-h0m" id="tp0-k7-2RO"/>
                 <outlet property="inputTextView" destination="rFH-51-QLl" id="xMY-Om-oX1"/>
@@ -24,7 +25,7 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <scrollView fixedFrame="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EnZ-0K-VJg">
-                    <rect key="frame" x="182" y="86" width="295" height="271"/>
+                    <rect key="frame" x="182" y="105" width="295" height="252"/>
                     <clipView key="contentView" misplaced="YES" id="xZi-iD-883">
                         <rect key="frame" x="1" y="1" width="223" height="133"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -33,10 +34,10 @@
                                 <rect key="frame" x="0.0" y="0.0" width="223" height="269"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <size key="minSize" width="293" height="269"/>
+                                <size key="minSize" width="293" height="250"/>
                                 <size key="maxSize" width="463" height="10000000"/>
                                 <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                <size key="minSize" width="293" height="269"/>
+                                <size key="minSize" width="293" height="250"/>
                                 <size key="maxSize" width="463" height="10000000"/>
                             </textView>
                         </subviews>
@@ -225,8 +226,16 @@
                         <action selector="sendMessage:" target="-2" id="U98-0c-Wpf"/>
                     </connections>
                 </button>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FUQ-wZ-jbr">
+                    <rect key="frame" x="182" y="80" width="94" height="17"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="peer" id="JvT-H2-Jvw">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
             </subviews>
-            <point key="canvasLocation" x="495.5" y="268.5"/>
+            <point key="canvasLocation" x="189.5" y="285.5"/>
         </customView>
     </objects>
 </document>
